# Databases

./: README.md
Lab 1/Part 2/: Phones.accdb
Lab 1/Part 3/: CMakeLists.txt  application.c  application.h  boolean.h  count.c  database.c  database.h  delete.c  get.c  get.h  indexTable.c  indexTable.h  inputoutput.c  inputoutput.h  insert.c  insert.h  io.c  io.h  main.c  run.c  run.h  structures.c  structures.h  tables.h  update.c  update.h
Lab 2/: Phones.accdb  Text.docx
Practice SQL/: University.accdb
